# cocktail-rag

./: .gitignore  Dockerfile  Dockerfile-api  Dockerfile-ui  Makefile  README.md  compose.yaml  entrypoint.sh  pyproject.toml
src/: paul_graham.py  sandbox.py  settings.py  simple_rag.py  test1.py  test2.py  working_rag.py
src/api/: main.py
src/api/routers/: query.py
src/api/schemas/: query.py
src/app/: main.py
src/app/routers/: query.py
src/rag/: rag.py
src/rag/components/: chat_engine.py  document_store.py  embed_model.py  llm.py  loader.py  pipeline.py  query_engine.py  storage_context.py  vector_store.py
src/rag/scripts/: build_vector_store.py  init_vector_store.py
src/scripts/: cocktail_friend_scrapper.py  scrapper.py
src/ui/: main.py  ui.py
storage/: index_store.json
