[tool.poetry]
name = "cocktail-rag"
version = "0.1.0"
description = ""
authors = ["agmuth <agmuth@gmail.com>"]
readme = "README.md"
packages = [{include="src"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
pydantic = "^2.6.4"
pydantic-settings = "^2.2.1"
python-dotenv = "^1.0.1"
fake-useragent = "^1.5.1"
llama-index = "^0.10.20"
tiktoken = "^0.6.0"
transformers = "^4.38.2"
llama-index-embeddings-huggingface = "^0.1.4"
llama-index-llms-ollama = "^0.1.2"
install = "^1.3.5"
llama-index-llms-huggingface = "^0.1.4"
accelerate = "^0.28.0"
pypdf = "^4.1.0"
einops = "^0.7.0"
bitsandbytes = "^0.43.0"
ebooklib = "^0.18"
llama-index-embeddings-ollama = "^0.1.2"
llama-index-readers-web = "^0.1.13"
typer = "^0.12.3"
qdrant-client = "^1.10.1"
llama-index-vector-stores-qdrant = "^0.2.13"
llama-index-storage-docstore-mongodb = "^0.1.3"
pymongo = "^4.8.0"
motor = "^3.5.1"
gradio = "^4.38.1"


[tool.poetry.group.dev.dependencies]
black = "^24.3.0"
isort = "^5.13.2"
ruff = "^0.3.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
