[tool.poetry]
name = "cocktail-rag"
version = "0.1.0"
description = ""
authors = ["agmuth <agmuth@gmail.com>"]
readme = "README.md"
packages = [{include="src"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
pydantic = "^2.8.2"
pydantic-settings = "^2.3.4"
python-dotenv = "^1.0.1"
llama-index = "^0.10.56"
tiktoken = "^0.7.0"
llama-index-llms-ollama = "^0.1.6"
llama-index-embeddings-ollama = "^0.1.2"
typer = "^0.12.3"
qdrant-client = "^1.10.1"
llama-index-vector-stores-qdrant = "^0.2.13"
llama-index-storage-docstore-mongodb = "^0.1.3"
pymongo = "^4.8.0"
motor = "^3.5.1"
gradio = "^4.38.1"


[tool.poetry.group.dev.dependencies]
black = "^24.3.0"
isort = "^5.13.2"
ruff = "^0.3.3"



[tool.poetry.group.scraper.dependencies]
beautifulsoup4 = "^4.12.3"
tenacity = "^8.5.0"
requests = "^2.32.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
